[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
force_single_line = true
skip_glob = [".env"]

[tool.pylint.'MASTER']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "line-too-long",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-function-args",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "invalid-name",
    "import-error",
    "wrong-import-order",
    "f-string-without-interpolation",
    "fixme",
    "raise-missing-from",
    "consider-using-f-string",
    "consider-using-dict-items",
    "duplicate-code",
    "unspecified-encoding",
    "missing-timeout",
]